# ec2-new

./: .gitignore  99-uda.rules  AUTHORS  CMakeLists.txt  ChangeLog  Doxyfile  INSTALL  Makefile.am  README  README.md  config.h.in  configure.ac  configure.in  ec2drv.kdevelop  ec2drv.kdevelop.pcs  ec2drv.spec
doc/: 60-silabs.rules  ec3  newcdb-EC2-examples.txt  usb-sniffing-linux.txt  usb-sniffing.txt
doc/.svn/: all-wcprops  entries
doc/.svn/text-base/: Makefile.am.svn-base  ec3.usermap.svn-base  newcdb-EC2-examples.txt.svn-base  sniffer.txt.svn-base  ubantu-usb.txt.svn-base
src/: CMakeLists.txt  Makefile.am
src/.svn/: all-wcprops  entries
src/.svn/text-base/: Makefile.am.svn-base
src/debug-core/: CMakeLists.txt  Makefile.am  breakpointmgr.cpp  breakpointmgr.h  cdbfile.cpp  cdbfile.h  contextmgr.cpp  contextmgr.h  data_types.h  dbgsession.cpp  ihex.c  ihex.h  linespec.cpp  memremap.cpp  memremap.h  module.cpp  module.h  outformat.cpp  outformat.h  symbol.cpp  symbol.h  symtab.cpp  symtab.h  symtypetree.cpp  symtypetree.h  target-dummy.cpp  target-dummy.h  target.cpp  target.h  targets51.cpp  targets51.h  targetsilabs.cpp  targetsilabs.h  types.h
src/debug-core/.svn/: all-wcprops  entries
src/debug-core/.svn/text-base/: Makefile.am.svn-base  cdbfile.cpp.svn-base  dbgsession.h.svn-base  linespec.cpp.svn-base  linespec.h.svn-base  module.h.svn-base  symbol.h.svn-base  symtab.h.svn-base  targets51.cpp.svn-base  targetsilabs.h.svn-base
src/devel-tools/: Makefile.am  playback.cpp
src/devel-tools/.svn/: all-wcprops  entries
src/devel-tools/.svn/text-base/: playback-comms.cpp.svn-base  playback-comms.h.svn-base  sniffer.c.svn-base
src/ec2drv/: CMakeLists.txt  Makefile.am  boot.c  boot.h  c2_mode.c  c2_mode.h  csv2c.py  device_table.csv  devices.c  devices.h  ec2drv.c  ec2drv.h  jtag_mode.c  jtag_mode.h
src/ec2drv/.svn/: all-wcprops  dir-prop-base  entries
src/ec2drv/.svn/text-base/: .cvsignore.svn-base  c2_mode.c.svn-base  devices.h.svn-base  ec2drv.c.svn-base  ec2types.h.svn-base  jtag_mode.h.svn-base
src/ec2tools/: CMakeLists.txt  Makefile.am  ec2-fw-0x13.raw  ec2-fw-0x14.raw  ec2device.cpp  ec2rfw.c  ec2test-any.cpp  ihex.c  ihex.h  readflash.c  writeflash.c
src/ec2tools/.svn/: all-wcprops  entries
src/ec2tools/.svn/text-base/: Makefile.am.svn-base  ec2fw.c.svn-base  ec3-fw-0x07.raw.svn-base  ec3adapters.c.svn-base  readflash.c.svn-base  writeflash.c.svn-base
src/newcdb/: CMakeLists.txt  Makefile.am  cmdbreakpoints.cpp  cmdbreakpoints.h  cmdcommon.cpp  cmdcommon.h  cmddisassemble.cpp  cmddisassemble.h  cmdmaintenance.h  cmdreadwrite.cpp  cmdreadwrite.h  cmdtarget.cpp  cmdtarget.h  main.cpp  parsecmd.cpp  parsecmd.h  utils.cpp  utils.h
src/newcdb/.svn/: all-wcprops  entries
src/newcdb/.svn/text-base/: cmdbreakpoints.cpp.svn-base  cmdbreakpoints.h.svn-base  cmdcommon.cpp.svn-base  cmdcommon.h.svn-base  cmddisassemble.h.svn-base  cmdmaintenance.cpp.svn-base  cmdshow.cpp.svn-base  cmdshow.h.svn-base  main.cpp.svn-base  newcdb.h.svn-base
src/newcdb/test/: .cvsignore  README  makefile  regtest.c  term_types.c  term_types_array.c  twofileA.c  twofunc.c  types_singlefile.c  types_twofileA.c  types_twofileA.h  types_twofileB.c
src/newcdb/test/.svn/: all-wcprops  dir-prop-base  entries
src/newcdb/test/.svn/text-base/: asmtest_a51.a51.svn-base  asmtest_c.c.svn-base  nested_struct.c.svn-base  nested_types.c.svn-base  simple.c.svn-base  twofileB.c.svn-base
templates/: cpp
templates/.svn/: all-wcprops  entries
